# ptx-pulseq

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  optimize.js  package-lock.json  package.json  requirements.txt  wrangler.toml
.github/workflows/: ci.yml
docs/: community-contact.md  examples.md  features.md  index.md  quickstart.md
docs/assets/: PowerMonitoring_animation_showcasing_pTx_perChannelControl.avif
docs/assets/seq/: 1x128EPI_rs_noFS_2ovs_ph.seq  epidiff_3_shot_ref_1p5mm_88sli_spoiler_noshift.seq  mprage_gt_noFear3_TE3.seq  test_gre.seq  test_spiral.seq
docs/assets/sequence/EPI/: EPI_phantom_reconstructed.avif
docs/assets/sequence/pTx/: pTx_GRE_phantom_ChannelCycle.avif
docs/stylesheets/: extra.css
src/: CMakeLists.txt  ExternalSequence.cpp  ExternalSequence.h  testparser.py
tests/approved/: fid.out  gre.out
